--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,4 +24,5 @@ html(ng-app="schoolines")
     
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    ng-view
+    block content
+    p ng-view
