put on same page

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,4 @@
 extends layout
 
 block content
-	a(href="https://ivle.nus.edu.sg/api/login/?apikey=#{api_key}&url=#{path}") Log in
+	a(href="#{path}") Log in
