--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,9 +16,12 @@ html(ng-app="schoolines")
     
     // include services
     script(src="/app/services/authService.js")
+    script(src="/app/services/deadlineService.js")
+    script(src="/app/services/userService.js")
     
     // include controllers
     script(src="/app/components/index/indexController.js")
+    script(src="/app/components/deadlineCreate/deadlineCreateController.js")
     
     
     
