add vote service skeleton

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html(ng-app="schoolines")
     script(src="/app/services/authService.js")
     script(src="/app/services/deadlineService.js")
     script(src="/app/services/userService.js")
+    script(src="/app/services/voteService.js")
     
     // include controllers
     script(src="/app/components/index/indexController.js")
