--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,7 @@ html(ng-app="schoolines")
     script(src="/app/services/userService.js")
     script(src="/app/services/voteService.js")
     script(src="/app/services/expService.js")
+    script(src="/app/services/session.js")
     
     // include controllers
     script(src="/app/components/index/indexController.js")
