--- a/public/app/components/index/index.html
+++ b/public/app/components/index/index.html
@@ -1,2 +1,12 @@
-{{title}}
-<button ng-click="link()">Login</button>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>{{title}}</title>
+    </head>
+
+    <body ng-app="mainApp" layout="row">
+        <button ng-click="link()">Login</button>
+         <deadline flex></deadline>
+    </body>
+</html>
