--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,36 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.circle-gt-md{
+	height:100px !important;
+	line-height: 100px !important;
+	width:100px !important;
+	border-radius:50%;
+	text-align: center;
+	vertical-align: middle;
+	margin:10px;
 }
 
-a {
-  color: #00B7FF;
+.circle{
+	height:200px !important;
+	line-height: 200px !important;
+	width:200px !important;
+	border-radius:50%;
+	text-align: center;
+	vertical-align: middle;
+	margin:20px;
+}
+.space-between{
+	margin-bottom:5px;
+}
+
+.height-150{
+	height:150px !important;
+}
+
+.drawer-icon{
+	height:150px;
+	width:150px;
+	margin-top:80px;
+}
+
+.full-height{
+	height:100vh;
 }
