change createUser to return userId

--- a/public/app/components/index/index.html
+++ b/public/app/components/index/index.html
@@ -7,6 +7,7 @@
 
     <body ng-app="mainApp" layout="row">
         <button ng-click="link()">Login</button>
+        <button onClick="window.location.href='/#/deadlineCreate'">create Deadline</button>
          <deadline flex></deadline>
     </body>
 </html>
