--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -1,7 +1,10 @@
 <form ng-submit="createDeadline()">
     <input ng-model="deadline.title" type="text"> title <br>
     <input ng-model="deadline.description" type="text"> description <br>
-    <input ng-model="deadline.module" type="text"> module <br>
+
+    <select ng-model="deadline.module">
+        <option ng-repeat='module in modules' value="{{module}}">{{module}} </option>
+    </select> Module<br>
     <input ng-model="deadline.due" type="date"> due <br>
     <button type="submit" name="button">submit</button>
 </form>
