--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -1,10 +1,52 @@
-<form ng-submit="createDeadline()">
-    <input ng-model="deadline.title" type="text"> title <br>
-    <input ng-model="deadline.description" type="text"> description <br>
-
-    <select ng-model="deadline.module">
-        <option ng-repeat='module in modules' value="{{module}}">{{module}} </option>
-    </select> Module<br>
-    <input ng-model="deadline.due" type="date"> due <br>
-    <button type="submit" name="button">submit</button>
-</form>
+<div ng-controller="addCtrl">
+	<md-toolbar   class="md-hue-3">
+		<div class="md-toolbar-tools">
+			<span flex></span><span><img class="logo" src="/browser/image/logo.png"/></span><span flex></span>
+		</div>
+	</md-toolbar>
+	<form name="userForm" class = "form-margin" ng-submit="createDeadline()">
+		<div layout="row">
+			<md-input-container class="md-block" flex>
+				<label>Module</label>
+				<md-select ng-model="deadline.module">
+				  <md-option ng-repeat="mod in modules" value="{{mod.code}}">
+					{{mod.code}}
+				  </md-option>
+				</md-select>
+			</md-input-container>
+		</div>
+		<div layout="row">
+			<md-input-container class="md-block" flex>
+				<label>Title</label>
+				<input ng-model="deadline.title">
+			</md-input-container>
+		</div>	
+		<div layout="row">
+			
+			<md-input-container>
+				<label>Date</label>
+				<md-datepicker  ng-model="deadline.due"></md-datepicker>
+			</md-input-container>
+			<span flex></span>
+			<md-input-container class="time">
+				<label>Hour</label>
+				<input type="number" step="any" name="hour" ng-model="deadline.hour" min="0" max="24" ng-pattern="\d+" />
+			</md-input-container>
+			
+			<md-input-container class="time">
+				<label>Min</label>
+				<input type="number" step="any" name="min" ng-model="deadline.min" min="0" max="59" ng-pattern="\d+" />
+			</md-input-container>
+		</div>
+		<div layout="row">
+			<md-input-container class="md-block" flex>
+				<label>Description (optional)</label>
+				<input ng-model="deadline.description">
+			</md-input-container>
+		</div>
+		<div layout="row">
+			<span flex></span>
+			<md-button type="submit">Submit</md-button>
+		<div>
+	</form>
+</div>
