--- a/public/app/components/deadlineList/deadline.html
+++ b/public/app/components/deadlineList/deadline.html
@@ -1,8 +1,8 @@
 
 
-<div>
+<div ng-controller="deadlineCtrl">
 
-
+	
 	<!--browser size-->
 	<div hide show-gt-md layout="row">
 		<div layout="column" class="full-height">
@@ -12,13 +12,11 @@
         md-whiteframe="4" flex>
 				<md-content layout-padding>
 					<md-list flex>
-
-						<md-list-item ng-click="null" >
-							<p class="md-title"layout="row">CS3216</p>
+					
+						<md-list-item ng-repeat="mod in modules" ng-click="null" >
+							<p class="md-title"layout="row">{{mod.code}}</p>
 						</md-list-item>
-						<md-list-item ng-click="null" >
-							<p class="md-title"layout="row">CS3234</p>
-						</md-list-item>
+						
 					</md-list>
 			  </md-content>
 			</md-sidenav>
@@ -26,18 +24,18 @@
 		<div layout="column" flex>
 			<md-toolbar   class="md-hue-3">
 			  <div class="md-toolbar-tools">
-				<span flex></span><span>Deadlines</span><span flex></span>
+				<span flex></span><span><img class="logo" src="/browser/image/logo.png"/></span><span flex></span>
 			  </div>
 			</md-toolbar>
 
 			<md-content>
 			  <md-list flex>
-
-				<md-list-item  ng-repeat="item in deadlines track by $index" ng-click="null" >
+				
+				<md-list-item  ng-repeat="item in deadlines" ng-click="null" >
 				  <span class="circle-gt-md md-title" style="background-color:{{item.color}}" >{{ item.module }}</span>
 				  <div class="md-list-item-text">
 					<p class="md-title"layout="row">{{ item.title }}</p>
-					<p class="md-subhead"layout="row">{{ item.desc }}</p>
+					<p class="md-subhead"layout="row">Contributed by: {{ item.cont }}</p>
 				  </div><span flex></span>
 				  <div layout="column">
 					<p class="md-title">{{ item.date}}</p>
@@ -47,7 +45,7 @@
 			</md-content>
 			</div>
 	</div>
-
+	
 	<!--mobile size-->
 	<div hide-gt-md layout="row">
 		<div layout="column">
@@ -57,40 +55,37 @@
 				md-is-locked-open="$mdMedia('gt-md')"
 				md-whiteframe="4">
 
-
+			  
 			  <md-content layout-padding ng-controller="LeftCtrl">
 				<md-list flex>
-
-
-					<md-list-item ng-click="null" >
-							<p class="md-display-2" layout="row">CS3216</p>
-						</md-list-item>
-						<md-list-item ng-click="null" >
-							<p class="md-display-2" layout="row">CS3234</p>
-						</md-list-item>
-				  </md-list>
+				
+					
+					<md-list-item ng-repeat="mod in modules" ng-click="null" >
+						<p class="md-title"layout="row">{{mod.code}}</p>
+					</md-list-item>
 			  </md-content>
-
-
+				
+				
 			</md-sidenav>
 		</div>
 		<div layout="column" flex>
 			<md-toolbar   class="md-hue-3 height-150">
 			  <div class="md-toolbar-tools">
-				<img class="drawer-icon" src="/images/drawer.png" ng-click="toggleLeft()"/><span flex></span><span class="md-display-2">Deadlines</span><span flex></span>
+				<img class="drawer-icon" src="/browser/image/drawer.png" ng-click="toggleLeft()"/><span flex></span><span><img class="logo-mobile" src="/browser/image/logo.png"/></span><span flex></span>
 			  </div>
 			</md-toolbar>
-
+			
 			<md-content>
 			  <md-list flex>
-				<md-list-item  ng-repeat="item in deadlines track by $index" ng-click="null" >
-				  <span class="circle md-display-2" style="background-color:{{item.color}}" >{{ item.module }}</span>
+				
+				<md-list-item  ng-repeat="item in deadlines" ng-click="null" >
+				  <span class="circle title" style="background-color:{{item.color}}" >{{ item.module }}</span>
 				  <div class="md-list-item-text" >
-					<p class="md-display-2"layout="row">{{ item.title }}</p>
-					<p class="md-display-1"layout="row">{{ item.desc }}</p>
+					<p class="md-title"layout="row">{{ item.title }}</p>
+					<p class="md-subhead"layout="row">Contributor: {{ item.cont }}</p>
 				  </div><span flex></span>
 				  <div layout="column">
-					<p class="md-display-2">{{ item.date}}</p>
+					<p class="md-subhead">{{ item.date}}</p>
 				  </div>
 				</md-list-item>
 			  </md-list>
@@ -98,3 +93,4 @@
 		</div>
 	</div>
 </div>
+
