--- a/public/app/components/index/index.html
+++ b/public/app/components/index/index.html
@@ -5,7 +5,7 @@
         <title>{{title}}</title>
     </head>
 
-    <body ng-app="mainApp" layout="row">
+    <body ng-app="schoolines" layout="row">
         <button ng-click="link()">Login</button>
         <button onClick="window.location.href='/#/deadlineCreate'">create Deadline</button>
          <deadline flex></deadline>
