--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,7 @@ html(ng-app="schoolines")
     script(src="/app/app.js")
     
     // include directives
+    script(src="app/directives/deadlineDirective.js")
     
     // include services
     script(src="/app/services/authService.js")
@@ -32,7 +33,6 @@ html(ng-app="schoolines")
     
     // include controllers
     script(src="/app/components/index/indexController.js")
-    script(src="/app/components/deadlineList/deadlineController.js")
     script(src="/app/components/deadlineCreate/deadlineCreateController.js")
     
     
@@ -40,10 +40,8 @@ html(ng-app="schoolines")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheet" href="/stylesheets/angular-material.min.css")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic")
-    link(rel="stylesheet" href="/app/components/deadlineList/deadline.css")
-	
-	//include angular router
-    script(src="/app/components/routes.js")
+    link(rel="stylesheet" href="/stylesheets/deadline.css")
+
   body
     block content
     ng-view
