--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -8,7 +8,7 @@
 		<div layout="row">
 			<md-input-container class="md-block" flex>
 				<label>Module</label>
-				<md-select ng-model="deadline.module">
+				<md-select ng-model="deadline.module" ng-required="{{true}}">
 				  <md-option ng-repeat="mod in modules" value="{{mod}}">
 					{{mod}}
 				  </md-option>
@@ -18,24 +18,24 @@
 		<div layout="row">
 			<md-input-container class="md-block" flex>
 				<label>Title</label>
-				<input ng-model="deadline.title">
+				<input ng-model="deadline.title" ng-required="{{true}}">
 			</md-input-container>
 		</div>
 		<div layout="row">
 
 			<md-input-container>
 				<label>Date</label>
-				<md-datepicker  ng-model="myDate"></md-datepicker>
+				<md-datepicker  ng-model="myDate" ng-required="{{true}}"></md-datepicker>
 			</md-input-container>
 			<span flex></span>
 			<md-input-container class="time">
 				<label>Hour</label>
-				<input type="number" step="any" name="hour" ng-model="deadline.hour" min="0" max="24"/>
+				<input type="number" step="any" name="hour" ng-model="deadline.hour" min="0" max="24" ng-required="{{true}}"/>
 			</md-input-container>
 
 			<md-input-container class="time">
 				<label>Min</label>
-				<input type="number" step="any" name="min" ng-model="deadline.min" min="0" max="59" />
+				<input type="number" step="any" name="min" ng-model="deadline.min" min="0" max="59"  ng-required="{{true}}"/>
 			</md-input-container>
 		</div>
 		<div layout="row">
