--- a/public/app/components/index/index.html
+++ b/public/app/components/index/index.html
@@ -7,8 +7,8 @@
     </head>
 
     <body ng-app="schoolines" layout="row">
-        <button ng-click="link()">Login</button>
         <button onClick="window.location.href='/#/deadlineCreate'">create Deadline</button>
          <deadline flex></deadline>
+         <navbar onClick='window.location="/#/deadlineCreate";' class="action-button"></navbar>
     </body>
 </html>
