--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,7 +32,7 @@ html(ng-app="schoolines")
     
     // include directives
     script(src="app/directives/deadlineDirective.js")
-    script(src="app/directives/navbar.directive.js")
+    script(src="app/directives/navbarDirective.js")
     
     // include services
     script(src="/app/services/authService.js")
@@ -45,7 +45,6 @@ html(ng-app="schoolines")
     // include controllers
     script(src="/app/components/index/indexController.js")
     script(src="/app/components/deadlineCreate/deadlineCreateController.js")
-    script(src="/app/components/navbar/navbar.controller.js")
     
     
     // css
