--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -46,6 +46,7 @@
 		</div>
 		<div layout="row">
 			<span flex></span>
+			<md-button aria-label="Close" onclick="window.location = '/'">Back</md-button>
 			<md-button type="submit">Submit</md-button>
 		<div>
 	</form>
