--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -1,1 +1,27 @@
-{{ deadline}}
+<div flex>
+	<md-toolbar   class="md-hue-3 toolbar">
+	  <div class="md-toolbar-tools">
+		<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
+	  </div>
+	</md-toolbar>
+	<md-content layout="column" flex>
+		<div layout="column" layout-align="center center" flex>
+			<span flex></span><span class="md-headline">{{deadline.module}}</span><span flex></span>
+		</div>
+		<md-list layout="column" flex>
+			<md-list-item>
+				<span class="md-title">{{deadline.title}}</span><span flex></span><span class="md-subhead">By: {{deadline.contributor}}</span>
+			</md-list-item>
+			<md-list-item>
+				<span class="md-body">Due on: {{deadline.date}}</span><span flex></span>
+			</md-list-item>
+			<md-list-item>
+				<span class="md-body">{{deadline.des}}</span>
+			</md-list-item>
+			<md-list-item>
+				<span flex></span><md-button aria-label="Close" onclick="window.location = '/'">Back</md-button>
+			</md-list-item>
+		</md-list>
+	</md-content >
+</div>
+
