--- a/public/stylesheets/deadline.css
+++ b/public/stylesheets/deadline.css
@@ -17,14 +17,18 @@
 
 	margin-top:20px;
 }
+.border{
+	border-right: 1px solid #333;
+}
 .circle{
-	height:50px !important;
-	line-height: 50px !important;
-	width:50px !important;
+	height:60px !important; 
+	line-height: 60px !important;
+	width:60px !important;
 	border-radius:50%;
 	text-align: center;
-	vertical-align: middle;
-	margin:5px;
+	vertical-align: middle;  
+	margin-right:5px;
+	margin-left:5px;
 }
 .space-between{
 	margin-bottom:5px;
@@ -41,5 +45,6 @@
 }
 
 .full-height{
+	
 	height:100vh;
 }
