align date hour and min

--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -19,7 +19,7 @@
 				<span class="md-body">{{deadline.des}}</span>
 			</md-list-item>
 			<md-list-item>
-				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
+				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button><md-button class="md-warn">Remove</md-button>
 			</md-list-item>
 		</md-list>
 	</md-content >
