--- a/views/layout.jade
+++ b/views/layout.jade
@@ -55,6 +55,7 @@ html(ng-app="schoolines")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic")
     link(rel="stylesheet" href="/stylesheets/deadline.css")
     link(rel="stylesheet" href="/stylesheets/navbar.css")
+    link(rel="stylesheet" href="/stylesheets/deadlineCreate.css")
 
 
   body
