optimize redirection as single page

--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -46,7 +46,7 @@
 		</div>
 		<div layout="row">
 			<span flex></span>
-			<md-button aria-label="Close" onclick="window.location = '/'">Back</md-button>
+			<md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
 			<md-button type="submit">Submit</md-button>
 		<div>
 	</form>
