--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -19,9 +19,8 @@
 				<span class="md-body">{{deadline.des}}</span>
 			</md-list-item>
 			<md-list-item>
-				<span flex></span><md-button aria-label="Close" onclick="window.location = '/'">Back</md-button>
+				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
 			</md-list-item>
 		</md-list>
 	</md-content >
 </div>
-
