--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,7 +26,7 @@ html(ng-app="schoolines")
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-84227826-1', 'auto');
-      ga('send', 'pageview');
+      ga('send', 'pageview', { page: $location.url() });
             
     // initialization
     script(src="/app/app.js")
