add hidding function to deadline

--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -19,7 +19,9 @@
 				<span class="md-body">{{deadline.des}}</span>
 			</md-list-item>
 			<md-list-item>
-				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button><md-button class="md-warn">Remove</md-button>
+				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
+				<md-button class="md-warn" ng-if="!isHidden" ng-click="hideDeadline(deadline.id)">Hide</md-button>
+				<md-button class="md-warn" ng-if="isHidden" ng-click="unhideDeadline(deadline.id)">Unhide</md-button>
 			</md-list-item>
 		</md-list>
 	</md-content >
