change color of header

--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -1,5 +1,5 @@
 <div flex>
-	<md-toolbar   class="md-hue-3 toolbar">
+	<md-toolbar   class="toolbar logo-header">
 	  <div class="md-toolbar-tools">
 		<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
 	  </div>
