--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -1,5 +1,5 @@
 <div>
-	<md-toolbar   class="md-hue-3">
+	<md-toolbar class="logo-header">
 		<div class="md-toolbar-tools">
 			<span flex></span><span><img class="logo" src="/images/logo.png"/></span><span flex></span>
 		</div>
