--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,8 +21,11 @@
 	margin-bottom:5px;
 }
 
-.height-150{
-	height:150px !important;
+.logo-header{
+	min-height: 70px;
+	background-color: #E8F1F2 !important;
+	position: fixed;
+	top: 0;
 }
 
 .drawer-icon{
@@ -33,4 +36,8 @@
 
 .full-height{
 	height:100vh;
+}
+
+body {
+	margin-top: 70px !important;
 }
