--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -1,5 +1,5 @@
 <div flex>
-	<md-toolbar   class="toolbar logo-header">
+	<md-toolbar   class="toolbar logo-header md-hue-3">
 	  <div class="md-toolbar-tools">
 		<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
 	  </div>
@@ -20,7 +20,7 @@
 			</md-list-item>
 			<md-list-item>
 				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
-				<md-button class="md-warn" ng-if="!isHidden" ng-click="hideDeadline(deadline.id)">Hide</md-button>
+				<md-button class="md-warn md-" ng-if="!isHidden" ng-click="hideDeadline(deadline.id)">Hide</md-button>
 				<md-button class="md-warn" ng-if="isHidden" ng-click="unhideDeadline(deadline.id)">Unhide</md-button>
 			</md-list-item>
 		</md-list>
