--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -4,7 +4,7 @@
 			<span flex></span><span><img class="logo" src="/images/logo.png"/></span><span flex></span>
 		</div>
 	</md-toolbar>
-	<form name="userForm" class = "form-margin" ng-submit="createDeadline()">
+	<form name="userForm" class = "form-margin margin-list" ng-submit="createDeadline()">
 		<div layout="row">
 			<md-input-container class="md-block" flex>
 				<label>Module</label>
