--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -4,7 +4,7 @@
 		<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
 	  </div>
 	</md-toolbar>
-	<md-content layout="column" flex>
+	<md-content layout="column margin-list" flex>
 		<div layout="column" layout-align="center center" flex>
 			<span flex></span><span class="md-headline">{{deadline.module}}</span><span flex></span>
 		</div>
