use angular ngclick on index navbar

--- a/public/app/components/index/index.html
+++ b/public/app/components/index/index.html
@@ -8,6 +8,6 @@
 
     <body ng-app="schoolines" layout="row">
          <deadline flex></deadline>
-         <navbar onClick='window.location="/#/deadlineCreate";' class="action-button"></navbar>
+         <navbar ng-click="redirectTo('/deadlineCreate')" class="action-button"></navbar>
     </body>
 </html>
