--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,6 +46,7 @@ html(ng-app="schoolines")
     script(src="/app/components/index/indexController.js")
     script(src="/app/components/deadlineCreate/deadlineCreateController.js")
     script(src="/app/components/deadlineDetail/deadlineDetailController.js")
+    script(src="/app/components/splashScreen/splashScreenController.js")
     
     
     // css
