--- a/views/layout.jade
+++ b/views/layout.jade
@@ -56,6 +56,7 @@ html(ng-app="schoolines")
     link(rel="stylesheet" href="/stylesheets/deadline.css")
     link(rel="stylesheet" href="/stylesheets/navbar.css")
     link(rel="stylesheet" href="/stylesheets/deadlineCreate.css")
+    link(rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon') 
 
 
   body
