--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html(ng-app="schoolines")
     script(src="/javascripts/vendor/angular-aria.min.js")
     script(src="/javascripts/vendor/angular-animate.min.js")
     script(src="/javascripts/vendor/angular-material.min.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js")
+    script(src="/javascripts/vendor/ngStorage.min.js")
     
     // Google Analytics
     script.
