fixed logo moving around

--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -1,10 +1,10 @@
 <div>
-	<md-toolbar class="logo-header md-hue-3">
+	<md-toolbar class="md-hue-3 header-height-70">
 		<div class="md-toolbar-tools">
 			<span flex></span><span><img class="logo" src="/images/logo.png"/></span><span flex></span>
 		</div>
 	</md-toolbar>
-	<form name="userForm" class = "form-margin margin-list" ng-submit="createDeadline()">
+	<form name="userForm" class = "form-margin" ng-submit="createDeadline()">
 		<div layout="row">
 			<md-input-container class="md-block" flex>
 				<label>Module</label>
