--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html(ng-app="schoolines")
   head
     meta(charset='utf8')
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
+    meta(name="apple-mobile-web-app-capable" content="yes")
+    meta(name="mobile-web-app-capable" content="yes")
     title Schoolines 
     
     
