added timepicker TODO: timepicker logic

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,8 @@
-
 doctype html
 html(ng-app="schoolines")
   head
     meta(charset='utf8')
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
-    meta(name="apple-mobile-web-app-capable" content="yes")
-    meta(name="mobile-web-app-capable" content="yes")
     title Schoolines 
     
     
@@ -19,6 +16,9 @@ html(ng-app="schoolines")
     script(src="/javascripts/vendor/angular-aria.min.js")
     script(src="/javascripts/vendor/angular-animate.min.js")
     script(src="/javascripts/vendor/angular-material.min.js")
+    script(src="/javascripts/vendor/moment.js")
+    script(src="/javascripts/vendor/beautifier.js")
+    script(src="/javascripts/vendor/angular-material-datetimepicker.min.js")
     script(src="/javascripts/vendor/ngStorage.min.js")
     
     // Google Analytics
@@ -59,6 +59,7 @@ html(ng-app="schoolines")
     link(rel="stylesheet" href="/stylesheets/deadline.css")
     link(rel="stylesheet" href="/stylesheets/navbar.css")
     link(rel="stylesheet" href="/stylesheets/deadlineCreate.css")
+    link(rel="stylesheet" href="/stylesheets/material-datetimepicker.min.css")
     link(rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon') 
 
 
