made timepicker work

--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -30,8 +30,8 @@
 			<span flex></span>
 			<md-input-container>
 				<label>Time</label>
-				<input class=" md-input" mdc-datetime-picker="" date="false" time="true" id="time2"
-				placeholder="23:59" min-date="minDate" format="HH:mm" ng-model="time" type="text">
+				<input class=" md-input time" mdc-datetime-picker="" date="false" time="true" id="time2"
+				placeholder="23:59" min-date="minDate" format="HH:mm" ng-model="deadline.timeStr" type="text"  ng-required="{{true}}">
 			</md-input-container>
 		</div>
 		
