--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,9 @@ html(ng-app="schoolines")
     script(src="/javascripts/vendor/angular-aria.min.js")
     script(src="/javascripts/vendor/angular-animate.min.js")
     script(src="/javascripts/vendor/angular-material.min.js")
+    script(src="/javascripts/vendor/moment.js")
+    script(src="/javascripts/vendor/beautifier.js")
+    script(src="/javascripts/vendor/angular-material-datetimepicker.min.js")
     script(src="/javascripts/vendor/ngStorage.min.js")
     
     // Google Analytics
@@ -56,28 +59,26 @@ html(ng-app="schoolines")
     link(rel="stylesheet" href="/stylesheets/deadline.css")
     link(rel="stylesheet" href="/stylesheets/navbar.css")
     link(rel="stylesheet" href="/stylesheets/deadlineCreate.css")
+    link(rel="stylesheet" href="/stylesheets/material-datetimepicker.min.css")
     
     // icon
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    link(rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon') 
-
-
+    link(rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png")
+    link(rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png")
+    link(rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png")
+    link(rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png")
+    link(rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png")
+    link(rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png")
+    link(rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png")
+    link(rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png")
+    link(rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png")
+    link(rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png")
+    link(rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png")
+    link(rel="manifest" href="/manifest.json")
+    meta(name="msapplication-TileColor" content="#ffffff")
+    meta(name="msapplication-TileImage" content="/images/ms-icon-144x144.png")
+    meta(name="theme-color" content="#ffffff")
 
   body
     block content
