add splash page login

--- a/public/app/components/splashScreen/splashScreen.html
+++ b/public/app/components/splashScreen/splashScreen.html
@@ -4,26 +4,26 @@
             <md-button ng-click="" class="md-raised">
                 Log in with IVLE
             </md-button>
-        
+
     </div>
-	
+
 	<div hide-gt-md  ng-style="{'background-image':'linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)),url({{images[1]}})'}" class="bg-cover fullscreen-splash" layout="column" layout-align="center center">
         <h2 class="md-display-3 strokeme">Never miss a deadline again</h2>
-            <md-button ng-click="" class="md-raised">
+            <md-button ng-click="login()" class="md-raised">
                 Log in with IVLE
             </md-button>
-        
+
     </div>
-	
+
     <div class="spread-divider"></div>
     <div ng-style="{'background-image':'linear-gradient(rgba(0,0,0, 0.4),rgba(0, 0, 0, 0.4)),url({{images[2]}})'}" class="bg-cover min-300-splash" layout="column" layout-align="center center">
         <h2 class="md-display-1 strokeme">Built by students, for students</h2>
 		<p class="md-body-1 white-text">Share deadlines with fellow classmates. Using crowd-sourced data, Schoolines can be used by students, TAs or even lecturers.</p>
     </div>
-	
+
     <div ng-style="{'background-image':'linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)),url({{images[3]}})'}" class="bg-cover  min-300-splash" layout="column" layout-align="center center">
         <h2 class="md-display-1 strokeme">Convenience at your fingertips</h2>
 		<p class="md-body-1 white-text">Optimised for mobile, Schoolines aims to curate all your school-related deadlines in one place. Schoolines will work with or without internet, deadlines will be updated whenever internet is available.</p>
     </div>
-    
+
 </md-content>
