add delete button to detail page

--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -22,6 +22,7 @@
 				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
 				<md-button class="md-warn md-" ng-if="!isHidden" ng-click="hideDeadline(deadline.id)">Hide</md-button>
 				<md-button class="md-warn" ng-if="isHidden" ng-click="unhideDeadline(deadline.id)">Unhide</md-button>
+				<md-button class="md-warn" ng-if="isContributor" ng-click="deleteDeadline(deadline.id)">remove</md-button>
 			</md-list-item>
 		</md-list>
 	</md-content >
