--- a/public/app/components/splashScreen/splashScreen.html
+++ b/public/app/components/splashScreen/splashScreen.html
@@ -1,7 +1,7 @@
 <md-content class="scroll-container landing-container">
     <div hide show-gt-md  ng-style="{'background-image':'linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)),url({{images[0]}})'}" class="bg-cover fullscreen-splash" layout="column" layout-align="center center">
         <h2 class="md-display-3 strokeme">Never miss a deadline again</h2>
-            <md-button ng-click="" class="md-raised">
+            <md-button ng-click="login()" class="md-raised">
                 Log in with IVLE
             </md-button>
 
