--- a/public/stylesheets/deadline.css
+++ b/public/stylesheets/deadline.css
@@ -8,6 +8,15 @@
 	margin:10px;
 }
 
+.loading{
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -300px;
+	margin-left: -400px;
+
+}
+
 .logo{
 	height:100px !important;
 	margin-top:20px;
@@ -18,12 +27,12 @@
 	border-right: 1px solid #333;
 }
 .circle{
-	height:60px !important; 
+	height:60px !important;
 	line-height: 60px !important;
 	width:60px !important;
 	border-radius:50%;
 	text-align: center;
-	vertical-align: middle;  
+	vertical-align: middle;
 	color: #FFFFFF;
 }
 .space-between{
@@ -59,6 +68,6 @@
 	height:10px;
 }
 .full-height{
-	
+
 	height:100vh;
 }
