--- a/views/layout.jade
+++ b/views/layout.jade
@@ -43,6 +43,7 @@ html(ng-app="schoolines")
     script(src="/app/services/ivleService.js")
     script(src="/app/services/expService.js")
     script(src="/app/services/session.js")
+    script(src="/app/services/onlineStatusService.js")
     
     // include controllers
     script(src="/app/components/index/indexController.js")
