disable create and delete deadlines when offline

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html(ng-app="schoolines")
     script(src="/javascripts/vendor/beautifier.js")
     script(src="/javascripts/vendor/angular-material-datetimepicker.min.js")
     script(src="/javascripts/vendor/ngStorage.min.js")
+    script(src="/javascripts/vendor/sweetalert.min.js")
     
     // Google Analytics
     script.
@@ -67,6 +68,7 @@ html(ng-app="schoolines")
     link(rel="stylesheet" href="/stylesheets/navbar.css")
     link(rel="stylesheet" href="/stylesheets/deadlineCreate.css")
     link(rel="stylesheet" href="/stylesheets/material-datetimepicker.min.css")
+    link(rel="stylesheet" type="text/css" href="/stylesheets/sweetalert.css")
     
     // icon
     link(rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png")
