--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,26 +7,27 @@
 	padding:10px;
 }
 
-.fullscreen-splash{
-	height:100vh;
-	margin-bottom:30px;
-}
 .min-300-splash{
-	
 	min-height:300px;
+}
+
+.margin-bottom-30{
 	margin-bottom:30px;
 }
 .white-text{
     color: white;
 }
-.strokeme
-{
-    color: white;
+.black-stroke-text{
     text-shadow:
     -1px -1px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;  
+}
+
+.nus-blue-bg{
+	background-color: rgba(0, 61, 124, 0.96) !important;
+	color:white !important;
 }
 
 .drawer-icon{
