--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -1,7 +1,7 @@
 <div>
 	<md-toolbar class="md-hue-3 header-height-70">
 		<div class="md-toolbar-tools">
-			<span flex></span><span><img class="logo" src="/images/logo.png"/></span><span flex></span>
+			<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
 		</div>
 	</md-toolbar>
 	<form name="userForm" class = "form-margin" ng-submit="createDeadline()">
