--- a/public/app/components/deadlineDetail/deadlineDetail.html
+++ b/public/app/components/deadlineDetail/deadlineDetail.html
@@ -20,9 +20,13 @@
 			</md-list-item>
 			<md-list-item>
 				<span flex></span><md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
+				<md-button ng-if="isContributor" ng-click="edit()">Edit</md-button>
+			</md-list-item>
+			<md-list-item>
+				<span flex></span>
 				<md-button class="md-warn md-" ng-if="!isHidden" ng-click="hideDeadline(deadline.id)">Hide</md-button>
 				<md-button class="md-warn" ng-if="isHidden" ng-click="unhideDeadline(deadline.id)">Unhide</md-button>
-				<md-button class="md-warn" ng-if="isContributor" ng-click="deleteDeadline(deadline.id)">remove</md-button>
+				<md-button class="md-warn" ng-if="isContributor" ng-click="deleteDeadline(deadline.id)">Remove</md-button>
 			</md-list-item>
 		</md-list>
 	</md-content >
