--- a/public/app/components/deadlineCreate/deadlineCreate.html
+++ b/public/app/components/deadlineCreate/deadlineCreate.html
@@ -4,7 +4,7 @@
 			<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
 		</div>
 	</md-toolbar>
-	<form name="userForm" class = "form-margin" ng-submit="createDeadline()">
+	<form name="userForm" class="form-margin" ng-submit="createDeadline()">
 		<div layout="row">
 			<md-content>Contribute a deadline!</md-content>
 		</div>
@@ -12,9 +12,9 @@
 			<md-input-container class="md-block" flex>
 				<label>Module</label>
 				<md-select ng-model="deadline.module" ng-required="{{true}}">
-				  <md-option ng-repeat="mod in modules" value="{{mod}}">
-					{{mod}}
-				  </md-option>
+					<md-option ng-repeat="mod in modules" value="{{mod}}">
+						{{mod}}
+					</md-option>
 				</md-select>
 			</md-input-container>
 		</div>
@@ -28,23 +28,20 @@
 
 			<md-input-container>
 				<label>Date</label>
-				<md-datepicker  ng-model="myDate" ng-required="{{true}}"></md-datepicker>
+				<md-datepicker ng-model="myDate" ng-required="{{true}}"></md-datepicker>
 			</md-input-container>
 			<span flex></span>
 			<md-input-container hide show-gt-md>
 				<label>Time</label>
-				<input class=" md-input time" mdc-datetime-picker="" date="false" time="true" id="time2"
-				placeholder="23:59" min-date="minDate" format="HH:mm" ng-model="deadline.timeStr" type="text"  ng-required="!(deadline.timeStrMob || deadline.timeStr)">
-				
+				<input class=" md-input time" mdc-datetime-picker="" date="false" time="true" id="time2" placeholder="23:59" min-date="minDate" format="HH:mm" ng-model="deadline.timeStr" type="text" ng-required="!(deadline.timeStrMob || deadline.timeStr)">
+
 			</md-input-container>
-			<md-input-container  hide-gt-md>
+			<md-input-container hide-gt-md>
 				<label>Time</label>
-				<input class="md-input time-mobile" type="time" 
-				   ng-model="deadline.timeStrMob"
-				   ng-required="!(deadline.timeStrMob || deadline.timeStr)">
+				<input class="md-input time-mobile" type="time" ng-model="deadline.timeStrMob" ng-required="!(deadline.timeStrMob || deadline.timeStr)">
 			</md-input-container>
 		</div>
-		
+
 		<div layout="row">
 			<md-input-container class="md-block" flex>
 				<label>Description (optional)</label>
@@ -55,6 +52,6 @@
 			<span flex></span>
 			<md-button aria-label="Close" ng-click="redirectTo('/')">Back</md-button>
 			<md-button type="submit">Submit</md-button>
-		<div>
+			<div>
 	</form>
-</div>
+	</div>
