--- a/views/layout.jade
+++ b/views/layout.jade
@@ -61,7 +61,7 @@ html(ng-app="schoolines")
     }
 
     // css
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href="/stylesheets/style.css")
     link(rel="stylesheet" href="/stylesheets/angular-material.min.css")
     link(rel="stylesheet" href="/stylesheets/fonts.css")
     link(rel="stylesheet" href="/stylesheets/deadline.css")
